# Sync-Server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
.drills/20260302-131102/: database.dump
.drills/20260302-131109/: database.dump
.drills/20260302-131148/: database.dump
.drills/20260302-131205/: database.dump
.github/workflows/: ci.yml  release-on-tag.yml  security-reliability.yml
api/: openapi.yaml
dashboard/: Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  vitest.config.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/lib/: security.test.ts  security.ts  server-api.ts  session.ts  setup-status.ts  simple-markdown.ts
dashboard/types/: altcha.d.ts
data/: ATTRIBUTION-ip-to-country.md
docs/: README.md  backup-restore-drill.md  encryption-guarantees.md  load-baseline.md  phase6-threat-model.md
migrations/2026-03-02-000001_initial_schema/: down.sql  up.sql
migrations/2026-03-02-000002_refresh_tokens/: up.sql
migrations/2026-03-02-000003_messages/: up.sql
migrations/2026-03-02-000005_federation/: down.sql  up.sql
migrations/2026-03-02-000006_admin_dashboard/: down.sql  up.sql
migrations/2026-03-02-000007_stickers/: up.sql
migrations/2026-03-02-000008_user_profile_fields/: down.sql  up.sql
migrations/2026-03-03-000009_device_push_tokens/: up.sql
migrations/2026-03-04-000010_encrypted_backups/: down.sql  up.sql
migrations/2026-03-04-000011_user_message_public_key/: down.sql  up.sql
migrations/2026-03-04-000012_server_news/: down.sql  up.sql
migrations/2026-03-04-000013_sticker_groups/: down.sql  up.sql
migrations/2026-03-04-000014_device_auth_pubkey/: down.sql  up.sql
migrations/2026-03-06-000015_require_approval/: down.sql  up.sql
migrations/2026-03-07-000016_guild_foundation/: down.sql  up.sql
migrations/2026-03-07-000016_trust_foundation/: down.sql  up.sql
migrations/2026-03-07-000017_guild_phase2_extensions/: down.sql  up.sql
migrations/2026-03-07-000017_trust_phase2_extensions/: down.sql  up.sql
migrations/2026-03-07-000018_guild_activity_heuristics/: down.sql  up.sql
migrations/2026-03-07-000018_trust_activity_heuristics/: down.sql  up.sql
migrations/2026-03-08-000012_rooms/: down.sql  up.sql
migrations/2026-03-09-000019_rename_trust_to_guild/: down.sql  up.sql
migrations/2026-03-12-000020_user_profile_description/: up.sql
nginx/: nginx.conf  nginx.conf.template
scripts/: backup_restore_drill.sh  bump-version.sh  gen-dev-certs.sh  init-ssl-dev.sh  init-ssl.sh  load_baseline.sh  security_scan.sh  seed.sql
scripts/version/: 0.0.9.md  1.0.0.md  1.0.1.md  1.0.2.md  1.0.3.md  1.1.0.md  1.1.1.md  1.2.0.md  1.2.1.md  1.2.10.md  1.2.11.md  1.2.12.md  1.2.13.md  1.2.14.md  1.2.15.md  1.2.16.md  1.2.17.md  1.2.18.md  1.2.19.md  (+29 more)
src/: config.rs  db.rs  errors.rs  main.rs  schema.rs
tests/: admin_tests.rs  auth_tests.rs  federation_tests.rs  guild_tests.rs  messages_tests.rs  rooms_tests.rs  stickers_tests.rs  trust_tests.rs
(+117 files in other folders)
