[package]
name = "sync-server"
version = "1.2.10"
edition = "2021"
description = "Sync federated chat server"

[[bin]]
name = "sync-server"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database (PostgreSQL via Diesel + r2d2 pool)
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = "2"

# Async Redis client
redis = { version = "0.27", features = ["tokio-comp"] }

# Auth
jsonwebtoken = "9"
ring = "0.17"
base64 = "0.22"
bcrypt = "0.15"
hex = "0.4"

# ID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Config / env
dotenvy = "0.15"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client (federation requests)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Rate limiting
actix-governor = "0.7"

# CORS (needed for Flutter web / browser clients)
actix-cors = "0.7"

# WebSocket
actix-ws = "0.3"

# Async stream utilities
futures-util = "0.3"

# Host spec detection
sysinfo = "0.32"

# GeoIP country lookup
maxminddb = "0.24"

# Image decode/resize/compress for admin planet image uploads
image = "0.25"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }

[profile.release]
lto = true
codegen-units = 1
